update `livro`
