# web_01_2024-main/Projeto_2/src/model/Livro.ts
@@ -6,18 +6,18 @@ export class Livro{
     categoriaID: number;
 
     constructor(id?:number, titulo?:string, autor?:string, categoriaID?:number){
-        this.validatesInformation(titulo, autor);
         this.id = id || 0;
         this.titulo = titulo || '';
         this.autor = autor || '';
         this.categoriaID = categoriaID || 0;
+        this.validatesInformation(titulo, autor);
     }
 
     private validatesInformation(titulo:any, autor:any){
         let error ='';
 
         if (typeof titulo !== 'string' || typeof autor !== 'string') {
-            error += ("Informações incompletas ou incorretas.");
+            error += ("Informações incompletas ou incorretas." + titulo + autor);
         }
 
         if(error != ''){
